Добавлен метод проверки сессии
